minor fix for course scheme

--- a/pertemuan01.html
+++ b/pertemuan01.html
@@ -88,7 +88,7 @@
                         <ul class="text-left" style="list-style: none; margin: 0; padding: 0;">
                             <li><strong>Nama:</strong> Pengenalan Komputasi</li>
                             <li><strong>Kode:</strong> WI25-00003</li>
-                            <li><strong>SKS:</strong> 2 (1 Teori + 1 Praktik)</li>
+                            <li><strong>SKS:</strong> 2 (2 Teori + Hands-on)</li>
                         </ul>
                     </div>
                     <div class="divider-vertical"></div>
@@ -270,7 +270,7 @@
                     <div class="flex-col card card-highlight text-small">
                         <h4><i class="bi bi-cup-straw"></i> Contoh: Masak Mie</h4>
                         <hr>
-                        <p><strong>Langkah-langkah:</strong></p>
+                        <!-- <p><strong>Langkah-langkah:</strong></p> -->
                         <ol>
                             <li>Panaskan 500ml air</li>
                             <li>Tunggu mendidih</li>
