fix dark mode issue

--- a/pertemuan01.html
+++ b/pertemuan01.html
@@ -335,7 +335,7 @@
                 <p class="text-small" style="margin-bottom: 30px;">Kita akan gunakan tools berbasis Cloud, jadi tidak
                     perlu install apapun!</p>
                 <div class="grid-2">
-                    <div class="card" style="border: 2px solid #4285F4; background: #e8f0fe !important;">
+                    <div class="card card-info" style="border: 2px solid #4285F4;">
                         <h4 style="color: #4285F4;">Google Colab</h4>
                         <p class="text-smaller">Rekomendasi Utama</p>
                         <hr>
