--- a/pertemuan04.html
+++ b/pertemuan04.html
@@ -387,19 +387,16 @@ Bisa MEMILIH
                 </div>
             </section>
 
-            <!-- === SLIDE 16: PANDUAN PENGERJAAN === -->
-            <section>
+            <!-- === SLIDE 16: PANDUAN PENGERJAAN (RINGKAS) === -->
+            <section class="no-break">
                 <h3>Panduan Pengerjaan Tugas</h3>
                 <div class="card card-info text-left">
-                    <p class="text-small">Untuk memastikan pemahaman kondisi majemuk, ikuti langkah-langkah berikut:</p>
-                    <ul class="text-smaller">
-                        <li><strong>Analisis Kondisi:</strong> Identifikasi kondisi yang menggunakan and/or, dan urutan if-elif-else.</li>
-                        <li><strong>Desain Alur:</strong> Buat pseudocode dengan nested if jika diperlukan.</li>
-                        <li><strong>Implementasi:</strong> Tulis kode dengan komentar jelas, gunakan operator logika dengan benar.</li>
-                        <li><strong>Testing:</strong> Jalankan dengan berbagai input untuk memastikan semua kondisi bekerja.</li>
-                        <li><strong>Refleksi:</strong> Tambahkan cell teks untuk refleksi penggunaan kondisi majemuk.</li>
-                        <li><strong>Dokumentasi:</strong> Jelaskan logika kode dan hasil di komentar.</li>
-                    </ul>
+                    <p class="text-small">Langkah singkat untuk tugas kondisi majemuk:</p>
+                    <ol class="text-smaller">
+                        <li><strong>Analisis & Rancang:</strong> Tentukan kondisi (and/or) dan buat pseudocode/nested if.</li>
+                        <li><strong>Implementasi & Test:</strong> Tulis kode dengan komentar; uji beberapa kasus termasuk edge-case.</li>
+                        <li><strong>Refleksi & Dokumentasi:</strong> Catat hasil, kesalahan, dan jelaskan logika di komentar.</li>
+                    </ol>
                 </div>
             </section>
 
